--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>Welcome to Amir's Programming Portfolio </h1>
-            <p>This website has a collection of programs</p>
+            <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI</p>
     </body>
 </html>
