--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Amir's Programming Portfolio</title>
     </head>
     <body>
+        <img src="
         <h1>Welcome to Amir's Programming Portfolio </h1>
             <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI</p>
     </body>
