--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Amir's Programming Portfolio</title>
     </head>
     <body>
-        <img src="
+        <img src="csc106_banner.jpg">
         <h1>Welcome to Amir's Programming Portfolio </h1>
             <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI</p>
     </body>
