--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
         <img src="csc106_banner.jpg">
         <h1>Welcome to Amir's Programming Portfolio </h1>
+        <img src="Home Button.png">
             <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI</p>
     </body>
 </html>
