--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <title>Amir's Programming Portfolio</title>
     </head>
     <body>
-        <img src="csc106_banner.jpg">
+        <img src="csc106_banner.jpg">  
+          <img src="Home Button.png">  <img src="Javascript Button.png">  <img src="About Me button.png">
         <h1>Welcome to Amir's Programming Portfolio </h1>
-        <img src="Home Button.png">
-            <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI</p>
+           <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI</p>
     </body>
 </html>
