--- a/AboutMe.html
+++ b/AboutMe.html
@@ -8,7 +8,7 @@
         <img src="csc106_banner.jpg">  
              <br><img src="Home Button.png">  <img src="Javascript Button.png">  <img src="About Me button.png">
         
-            <h1>Welcome to Amir's Programming Portfolio </h1>
-           <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI</p>
+            <h1>Welcome to Amir's Javascripts</h1>
+           <p>This website has a collection of my javascripts that I wrote in my CSC 106 class in URI</p>
     </body>
 </html>
