--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <img src="csc106_banner.jpg">  
-        <br><a href="https://arahmat25.github.io/AboutMe.html"><img src="Home Button.png"></a>  <img src="Javascript Button.png">  <img src="About Me button.png">
+        <br><a href="https://arahmat25.github.io"><img src="Home Button.png"></a>  <img src="Javascript Button.png">  <a href="https://arahmat25.github.io/AboutMe.html"><img src="About Me button.png"></a>
         
             <h1>Welcome to Amir's Programming Portfolio </h1>
            <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI</p>
