--- a/AboutMe.html
+++ b/AboutMe.html
@@ -6,9 +6,10 @@
     </head>
     <body>
         <img src="csc106_banner.jpg">  
-             <br><img src="Home Button.png">  <img src="Javascript Button.png">  <img src="About Me button.png">
+        <br><a href="https://arahmat25.github.io"><img src="Home Button.png"></a>  <a href="arahmat25.github.io/Javascripts.html"><img src="Javascript Button.png"></a>  <a href="https://arahmat25.github.io/AboutMe.html"><img src="About Me button.png"></a>
         
-            <h1>Welcome to Amir's Javascripts</h1>
-           <p>This website has a collection of my javascripts that I wrote in my CSC 106 class in URI</p>
+            <h1>Welcome to Amir's About Me Page </h1>
+           <p>This website has a collection of my  that I wrote in my CSC 106 class in URI<br>
+        My full name is Amir Rahmat. I am Cambodian and Malaysian. I have a little brother and 2 pet fishes. I love to read and hang out with my friends. I elso enjoy pplaying video games.</p>
     </body>
 </html>
