--- a/AboutMe.html
+++ b/AboutMe.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <img src="csc106_banner.jpg">  
-        <br><a href="https://arahmat25.github.io"><img src="Home Button.png"></a>  <a href="arahmat25.github.io/Javascripts.html"><img src="Javascript Button.png"></a>  <a href="https://arahmat25.github.io/AboutMe.html"><img src="About Me button.png"></a>
+        <br><a href="https://arahmat25.github.io"><img src="Home Button.png"></a>  <a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascript Button.png"></a> <a href="https://arahmat25.github.io/AboutMe.html"><img src="About Me button.png"></a>
         
             <h1>Welcome to Amir's About Me Page </h1>
            <p>This website has a collection of my  that I wrote in my CSC 106 class in URI<br>
