--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     </head>
     <body>
         <img src="csc106_banner.jpg">  
-        <br><a href="https://arahmat25.github.io"><img src="Home Button.png"></a>  <a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascript Button.png"></a> <a href="https://arahmat25.github.io/AboutMe.html"><img src="About Me button.png"></a>
+            <table>
+                <thread>
+                        <tr>
+                           
+                            <br><th><a href="https://arahmat25.github.io"><img src="Home Button.png"></a></th>  
+                            <th><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascript Button.png"></a></th> 
+                            <th><a href="https://arahmat25.github.io/AboutMe.html"><img src="About Me button.png"></a></th>
+                    </tr>
+                    </thead>
         
             <h1>Welcome to Amir's Programming Portfolio </h1>
            <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI</p>
