--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
     <body>
         <img src="csc106_banner.jpg">  
             <table>
-                       <tr>
-                           
-                            <br><th><a href="https://arahmat25.github.io"><img src="Home Button.png"></a></th>  
+                   <tr>
+                            <th><a href="https://arahmat25.github.io"><img src="Home Button.png"></a></th>  
                             <th><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascript Button.png"></a></th> 
                             <th><a href="https://arahmat25.github.io/AboutMe.html"><img src="About Me button.png"></a></th>
-                    </tr>
-                    </thead>
-        
+                </tr>
             <h1>Welcome to Amir's Programming Portfolio </h1>
            <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI</p>
     </body>
