--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <img src="csc106_banner.jpg">  
             <table>
                    <tr>
-                            <th><a href="https://arahmat25.github.io"><img src="Home Button.png"></a></th>  
-                            <th><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascript Button.png"></a></th> 
-                            <th><a href="https://arahmat25.github.io/AboutMe.html"><img src="About Me button.png"></a></th>
+                            <td><a href="https://arahmat25.github.io"><img src="Home Button.png"></a></td>  
+                            <td><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascript Button.png"></a></td> 
+                            <td><a href="https://arahmat25.github.io/AboutMe.html"><img src="About Me button.png"></a></td>
                 </tr>
             <h1>Welcome to Amir's Programming Portfolio </h1>
            <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI</p>
