--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                             <td><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascript Button.png"></a></td> 
                             <td><a href="https://arahmat25.github.io/AboutMe.html"><img src="About Me button.png"></a></td>
                 </tr>
+        </table>
             <h1>Welcome to Amir's Programming Portfolio </h1>
            <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI</p>
     </body>
