--- a/Javascripts.html
+++ b/Javascripts.html
@@ -6,7 +6,13 @@
     </head>
     <body>
         <img src="csc106_banner.jpg">  
-        <br><a href="https://arahmat25.github.io"><img src="Home Button.png"></a>  <a href="arahmat25.github.io/Javascripts.html"><img src="Javascript Button.png"></a>  <a href="https://arahmat25.github.io/AboutMe.html"><img src="About Me button.png"></a>
+         <table>
+                   <tr>
+                            <td><a href="https://arahmat25.github.io"><img src="Home Button.png"></a></td>  
+                            <td><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascript Button.png"></a></td> 
+                            <td><a href="https://arahmat25.github.io/AboutMe.html"><img src="About Me button.png"></a></td>
+                </tr>
+        </table>
         
             <h1>Welcome to Amir's Javascripts </h1>
            <p>This website has a collection of my Javascripts that I wrote in my CSC 106 class in URI<br>
