--- a/AboutMe.html
+++ b/AboutMe.html
@@ -6,8 +6,13 @@
     </head>
     <body>
         <img src="csc106_banner.jpg">  
-        <br><a href="https://arahmat25.github.io"><img src="Home Button.png"></a>  <a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascript Button.png"></a> <a href="https://arahmat25.github.io/AboutMe.html"><img src="About Me button.png"></a>
-        
+          <table>
+                   <tr>
+                            <td><a href="https://arahmat25.github.io"><img src="Home Button.png"></a></td>  
+                            <td><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascript Button.png"></a></td> 
+                            <td><a href="https://arahmat25.github.io/AboutMe.html"><img src="About Me button.png"></a></td>
+                </tr>
+        </table>
             <h1>Welcome to Amir's About Me Page </h1>
            <p>This website has a collection of my  that I wrote in my CSC 106 class in URI<br>
         My full name is Amir Rahmat. I am Cambodian and Malaysian. I have a little brother and 2 pet fishes. I love to read and hang out with my friends. I elso enjoy pplaying video games.</p>
