--- a/new.html
+++ b/new.html
@@ -13,7 +13,7 @@
                             <td><a href="https://arahmat25.github.io/AboutMe.html"><img src="About Me button.png"></a></td>
                 </tr>
         </table>
-            <h1>Welcome to Amir's Programming Portfolio </h1>
-           <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI</p>
+            <h1>Welcome to Amir's Programming Test Portfolio </h1>
+           <p>This website has a collection of my test programs that I wrote in my CSC 106 class in URI</p>
     </body>
 </html>
