--- a/new.html
+++ b/new.html
@@ -7,6 +7,7 @@
             body {
                 background-color:lightblue;
             }
+        </style>
     </head>
     <body>
         <img src="csc106_banner.jpg">  
