--- a/new.html
+++ b/new.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Amir's Programming Portfolio</title>
+        <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
         <img src="csc106_banner.jpg">  
