--- a/AboutMe.html
+++ b/AboutMe.html
@@ -5,6 +5,7 @@
         <title>Amir's Programming Portfolio</title>
     </head>
     <body>
+        <img src="aboutmebackground.jpg"
         <img src="csc106_banner.jpg">  
           <table>
                    <tr>
