--- a/AboutMe.html
+++ b/AboutMe.html
@@ -3,9 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Amir's Programming Portfolio</title>
+        <style>
+            #background {
+                float:middle;
+            }
+        </stlye>
     </head>
     <body>
-        <img src="aboutmebackground.jpg">
+        <img sr id="background" ="aboutmebackground.jpg">
         <img src="csc106_banner.jpg">  
           <table>
                    <tr>
