--- a/new.html
+++ b/new.html
@@ -4,8 +4,14 @@
         <meta charset="utf-8">
         <title>Amir's Programming Portfolio</title>
         <link rel="stylesheet" href="stylesheet.css">
+        <style>
+            #background {
+                float:right;
+            }
+        </style>
     </head>
-    <body>
+    <body> 
+        <img id="background" ="amirpic.png">
         <img src="csc106_banner.jpg">  
             <table>
                    <tr>
