--- a/new.html
+++ b/new.html
@@ -11,7 +11,7 @@
         </style>
     </head>
     <body> 
-        <img id="background" ="amirpic.png">
+        <img id="background" src="amirpic.png">
         <img src="csc106_banner.jpg">  
             <table>
                    <tr>
