--- a/new.html
+++ b/new.html
@@ -7,6 +7,7 @@
         <style>
             #background {
                 float:right;
+                width:30%;
             }
         </style>
     </head>
