--- a/new.html
+++ b/new.html
@@ -7,7 +7,8 @@
         <style>
             #background {
                 float:right;
-                width:30%;
+                width:10%;
+                margin-right:20px;
             }
         </style>
     </head>
