--- a/new.html
+++ b/new.html
@@ -6,14 +6,13 @@
         <link rel="stylesheet" href="stylesheet.css">
         <style>
             #background {
-                float:right;
+                float:left;
                 width:10%;
-                margin-right:20px;
+                margin-left:20px;
             }
         </style>
     </head>
-    <body> 
-        <img id="background" src="amirpic.png">
+    <body>
         <img src="csc106_banner.jpg">  
             <table>
                    <tr>
@@ -24,5 +23,6 @@
         </table>
             <h1>Welcome to Amir's Programming Test Portfolio </h1>
            <p>This website has a collection of my test programs that I wrote in my CSC 106 class in URI</p>
+          <img id="background" src="amirpic.png">
     </body>
 </html>
