--- a/new.html
+++ b/new.html
@@ -13,7 +13,7 @@
         </style>
     </head>
     <body>
-        <img src="csc106_banner.jpg">  
+        <img src="csbanner (2).jpg">  
             <table>
                    <tr>
                             <td><a href="https://arahmat25.github.io"><img src="Home Button.png"></a></td>  
