--- a/new.html
+++ b/new.html
@@ -5,6 +5,9 @@
         <title>Amir's Programming Portfolio</title>
         <link rel="stylesheet" href="stylesheet.css">
         <style>
+            body {
+                background-image:"actualbanner.png";
+            }
             #background {
                 float:left;
                 width:10%;
