--- a/new.html
+++ b/new.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="stylesheet.css">
         <style>
             body {
-                background-image:"actualbanner.png";
+                background-image: image src="actualbanner.png";
             }
             #background {
                 float:left;
