--- a/new.html
+++ b/new.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="stylesheet.css">
         <style>
             body {
-                background-image: image src="actualbanner.png";
+                background-image:url"arahmat25.github.io/new.html";
             }
             #background {
                 float:left;
@@ -17,6 +17,7 @@
     </head>
     <body>
         <img src="csbanner (2).jpg">  
+        
             <table>
                    <tr>
                             <td><a href="https://arahmat25.github.io"><img src="Home Button.png"></a></td>  
