--- a/new.html
+++ b/new.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="stylesheet.css">
         <style>
             body {
-                background-image:url"arahmat25.github.io/new.html";
+                background-image:url("arahmat25.github.io/new.html");
             }
             #background {
                 float:left;
@@ -28,5 +28,6 @@
             <h1>Welcome to Amir's Programming Test Portfolio </h1>
            <p>This website has a collection of my test programs that I wrote in my CSC 106 class in URI</p>
           <img id="background" src="amirpic.png">
+         <img style
     </body>
 </html>
