--- a/new.html
+++ b/new.html
@@ -5,9 +5,10 @@
         <title>Amir's Programming Portfolio</title>
         <link rel="stylesheet" href="stylesheet.css">
         <style>
-            body {
-                background-image:url("arahmat25.github.io/new.html");
-            }
+           body {
+  background-image: url("actualbanner.png");
+  background-color: #cccccc;
+}
             #background {
                 float:left;
                 width:10%;
