--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <img src="csc106_banner.jpg">  
             <table>
                    <tr>
-                            <td><a href="https://arahmat25.github.io"><img src="Home Button.png"></a></td>  
-                            <td><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascript Button.png"></a></td> 
-                            <td><a href="https://arahmat25.github.io/AboutMe.html"><img src="About Me button.png"></a></td>
+                            <td><a href="https://arahmat25.github.io"><img src="Real-home-button.png"></a></td>  
+                            <td><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascripts.png></a></td> 
+                            <td><a href="https://arahmat25.github.io/AboutMe.html"><img src="real-about-me.png"></a></td>
                 </tr>
         </table>
             <h1>Welcome to Amir's Programming Portfolio </h1>
