--- a/myapps.html
+++ b/myapps.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Amir's Programming Portfolio</title>
+    </head>
+    <body>
+        <img src="csc106_banner.jpg">  
+            <table>
+                   <tr>
+                            <td><a href="https://arahmat25.github.io"><img src="Real-home-button.png"></a></td>  
+                            <td><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascripts.png></a></td> 
+                            <td><a href="https://arahmat25.github.io/AboutMe.html"><img src="real-about-me.png"></a></td>
+                </tr>
+        </table>
+            <h1>Welcome to Amir's Programming Portfolio </h1>
+           <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI</p>
+    </body>
+</html>
