--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <table>
                    <tr>
                             <td><a href="https://arahmat25.github.io"><img src="Real-home-button.png"></a></td>  
-                            <td><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascripts.png></a></td> 
+                            <td><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascripts.png"></a></td>
                             <td><a href="https://arahmat25.github.io/myapps.html"><img src="My-apps-real.png"></a></td>
                             <td><a href="https://arahmat25.github.io/AboutMe.html"><img src="real-about-me.png"></a></td>
                 </tr>
