--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Amir's Programming Portfolio</title>
     </head>
     <body>
-        <img src="csc106_banner.jpg">  
+        <img src="csbanner (2).jpg">  
             <table>
                    <tr>
                             <td><a href="https://arahmat25.github.io"><img src="Real-home-button.png"></a></td>  
