--- a/new.html
+++ b/new.html
@@ -25,7 +25,7 @@
                             <td><a href="https://arahmat25.github.io/AboutMe.html"><img src="About Me button.png"></a></td>
                 </tr>
         </table>
-            <h1>Welcome to Amir's Programming Test Portfolio </h1>
+            <h1 class="heading">Welcome to Amir's Programming Test Portfolio </h1>
            <p>This website has a collection of my test programs that I wrote in my CSC 106 class in URI</p>
           <img id="background" src="amirpic.png">
          <img style
