--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
                             <td><a href="https://arahmat25.github.io/AboutMe.html"><img src="real-about-me.png"></a></td>
                 </tr>
         </table>
+         <div class="heading">
             <h1 class="heading">Welcome to Amir's Programming Portfolio </h1>
+        </div>
            <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI</p>
     </body>
 </html>
