--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Amir's Programming Portfolio</title>
+         <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
         <img src="csbanner (2).jpg">  
