--- a/AboutMe.html
+++ b/AboutMe.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Amir's Programming Portfolio</title>
+         <link rel="stylesheet" href="stylesheet.css">
            
     </head>
     <body>
@@ -14,7 +15,9 @@
                             <td><a href="https://arahmat25.github.io/AboutMe.html"><img src="About Me button.png"></a></td>
                 </tr>
         </table>
+        <div class="heading">
             <h1>Welcome to Amir's About Me Page </h1>
+        </div>
            <p>This website has a collection of my  that I wrote in my CSC 106 class in URI<br>
         My full name is Amir Rahmat. I am Cambodian and Malaysian. I have a little brother and 2 pet fishes. I love to read and hang out with my friends. I elso enjoy pplaying video games.</p>
     </body>
