--- a/Javascripts.html
+++ b/Javascripts.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Amir's Programming Portfolio</title>
+         <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
         <img src="csc106_banner.jpg">  
@@ -14,7 +15,7 @@
                 </tr>
         </table>
         
-            <h1>Welcome to Amir's Javascripts </h1>
+        <div class:"class"><h1>Welcome to Amir's Javascripts </h1> </div>
            <p>This website has a collection of my Javascripts that I wrote in my CSC 106 class in URI<br>
 </p>
     </body>
