--- a/new.html
+++ b/new.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="stylesheet.css">
         <style>
            body {
-  background-image: url("actualbanner.png");
+  background-image: url("actualbanner.png") no-repeat;
 }
             #background {
                 float:left;
