--- a/new.html
+++ b/new.html
@@ -19,7 +19,7 @@
     <body>
         <img src="csbanner (2).jpg">  
         
-            <table>
+            <table width="100%>
                    <tr>
                             <td><a href="https://arahmat25.github.io"><img src="Home Button.png"></a></td>  
                             <td><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascript Button.png"></a></td> 
