--- a/new.html
+++ b/new.html
@@ -8,6 +8,8 @@
            body {
   background-image: url("actualbanner.png");
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
             #background {
                 float:left;
