--- a/Javascripts.html
+++ b/Javascripts.html
@@ -6,12 +6,13 @@
          <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
-        <img src="csc106_banner.jpg">  
+        <img src="csbanner (2).jpg">  
          <table>
                    <tr>
-                            <td><a href="https://arahmat25.github.io"><img src="Home Button.png"></a></td>  
-                            <td><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascript Button.png"></a></td> 
-                            <td><a href="https://arahmat25.github.io/AboutMe.html"><img src="About Me button.png"></a></td>
+                             <td><a href="https://arahmat25.github.io"><img src="Real-home-button.png"></a></td>  
+                            <td><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascripts.png"></a></td>
+                            <td><a href="https://arahmat25.github.io/myapps.html"><img src="My-apps-real.png"></a></td>
+                            <td><a href="https://arahmat25.github.io/AboutMe.html"><img src="real-about-me.png"></a></td>
                 </tr>
         </table>
         
