--- a/Javascripts.html
+++ b/Javascripts.html
@@ -16,7 +16,9 @@
                 </tr>
         </table>
         
-        <div class:"heading"><h1>Welcome to Amir's Javascripts </h1> </div>
+       <div class="heading">
+            <h1>Welcome to Amir's About Me Page </h1>
+        </div>
            <p>This website has a collection of my Javascripts that I wrote in my CSC 106 class in URI<br>
 </p>
     </body>
