--- a/myapps.html
+++ b/myapps.html
@@ -10,11 +10,14 @@
             <table>
                    <tr>
                             <td><a href="https://arahmat25.github.io"><img src="Real-home-button.png"></a></td>  
-                            <td><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascripts.png></a></td> 
+                            <td><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascripts.png"></a></td>
+                            <td><a href="https://arahmat25.github.io/myapps.html"><img src="My-apps-real.png"></a></td>
                             <td><a href="https://arahmat25.github.io/AboutMe.html"><img src="real-about-me.png"></a></td>
                 </tr>
         </table>
-            <h1>Welcome to Amir's Programming Portfolio </h1>
+        <div class="heading">    
+        <h1>Welcome to Amir's Programming Portfolio </h1>
+        </div>
            <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI</p>
     </body>
 </html>
