--- a/myapps.html
+++ b/myapps.html
@@ -6,18 +6,20 @@
          <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
-        <img src="csc106_banner.jpg">  
-            <table>
+        <img src="csbanner (2).jpg">  
+         <table>
                    <tr>
-                            <td><a href="https://arahmat25.github.io"><img src="Real-home-button.png"></a></td>  
+                             <td><a href="https://arahmat25.github.io"><img src="Real-home-button.png"></a></td>  
                             <td><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascripts.png"></a></td>
                             <td><a href="https://arahmat25.github.io/myapps.html"><img src="My-apps-real.png"></a></td>
                             <td><a href="https://arahmat25.github.io/AboutMe.html"><img src="real-about-me.png"></a></td>
                 </tr>
         </table>
-        <div class="heading">    
-        <h1>Welcome to Amir's Programming Portfolio </h1>
+        
+       <div class="heading">
+            <h1>Welcome to Amir's About Me Page </h1>
         </div>
-           <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI</p>
+           <p>This website has a collection of my Javascripts that I wrote in my CSC 106 class in URI<br>
+</p>
     </body>
 </html>
