--- a/Javascripts.html
+++ b/Javascripts.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Amir's Programming Portfolio</title>
+        <title>Amir's Javascript Programming Portfolio</title>
          <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
@@ -17,7 +17,7 @@
         </table>
         
        <div class="heading">
-            <h1>Welcome to Amir's About Me Page </h1>
+            <h1>Welcome to Amir's Javascript Page </h1>
         </div>
            <p>This website has a collection of my Javascripts that I wrote in my CSC 106 class in URI<br>
 </p>
