--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
          <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
+       <div class="banner">
         <img src="csbanner (2).jpg">  
+        </div>
             <table>
                    <tr>
                             <td><a href="https://arahmat25.github.io"><img src="Real-home-button.png"></a></td>  
