--- a/AboutMe.html
+++ b/AboutMe.html
@@ -19,7 +19,7 @@
         <div class="heading">
             <h1>Welcome to Amir's About Me Page </h1>
         </div>
-           <p>This website has a collection of my  that I wrote in my CSC 106 class in URI<br>
+           <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI<br>
         My full name is Amir Rahmat. I am Cambodian and Malaysian. I have a little brother and 2 pet fishes. I love to read and hang out with my friends. I elso enjoy pplaying video games.</p>
     </body>
 </html>
