--- a/myapps.html
+++ b/myapps.html
@@ -9,10 +9,10 @@
         <img src="csbanner (2).jpg">  
          <table>
                    <tr>
-                             <td><a href="https://arahmat25.github.io"><img src="Real-home-button.png"></a></td>  
-                            <td><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascripts.png"></a></td>
-                            <td><a href="https://arahmat25.github.io/myapps.html"><img src="My-apps-real.png"></a></td>
-                            <td><a href="https://arahmat25.github.io/AboutMe.html"><img src="real-about-me.png"></a></td>
+                            <td><a href="https://arahmat25.github.io"><img src="Real-home-button.png"width="200"></a></td>  
+                            <td><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascripts.png" width="200"></a></td>
+                            <td><a href="https://arahmat25.github.io/myapps.html"><img src="My-apps-real.png"width="200"></a></td>
+                            <td><a href="https://arahmat25.github.io/AboutMe.html"><img src="real-about-me.png"width="200"></a></td>
                 </tr>
         </table>
         
