--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
         <meta charset="utf-8">
         <title>Amir's Programming Portfolio</title>
          <link rel="stylesheet" href="stylesheet.css">
+        <style>
+            .banner {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+        </style>
     </head>
     <body>
        <div class="banner">
