--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
         </style>
     </head>
     <body>
-       <div class="banner">
-        <img src="csbanner (2).jpg">  
-        </div>
+        <img class="banner" src="csbanner (2).jpg">  
+
             <table>
                    <tr>
                             <td><a href="https://arahmat25.github.io"><img src="Real-home-button.png"width="200"></a></td>  
