--- a/AboutMe.html
+++ b/AboutMe.html
@@ -7,7 +7,7 @@
            
     </head>
     <body>
-        <img src="csbanner (2).jpg">  
+        <img class="banner" src="csbanner (2).jpg">  
           <table>
                    <tr>
                              <td><a href="https://arahmat25.github.io"><img src="Real-home-button.png"width="200"></a></td>  
