--- a/myapps.html
+++ b/myapps.html
@@ -6,7 +6,7 @@
          <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
-        <img src="csbanner (2).jpg">  
+        <img class="banner" src="csbanner (2).jpg">  
          <table>
                    <tr>
                             <td><a href="https://arahmat25.github.io"><img src="Real-home-button.png"width="200"></a></td>  
