--- a/AboutMe.html
+++ b/AboutMe.html
@@ -4,6 +4,12 @@
         <meta charset="utf-8">
         <title>Amir's About Me Portfolio</title>
          <link rel="stylesheet" href="stylesheet.css">
+          body {
+  background-image: url("actualbanner.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
            
     </head>
     <body>
