--- a/AboutMe.html
+++ b/AboutMe.html
@@ -4,12 +4,14 @@
         <meta charset="utf-8">
         <title>Amir's About Me Portfolio</title>
          <link rel="stylesheet" href="stylesheet.css">
-          body {
+         <style>
+             body {
   background-image: url("actualbanner.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
 }
+        </style>
            
     </head>
     <body>
