--- a/AboutMe.html
+++ b/AboutMe.html
@@ -28,6 +28,8 @@
             <h1>Welcome to Amir's About Me Page </h1>
         </div>
            <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI<br>
-        My full name is Amir Rahmat. I am Cambodian and Malaysian. I have a little brother and 2 pet fishes. I love to read and hang out with my friends. I elso enjoy pplaying video games.</p>
+        My full name is Amir Rahmat. I am Cambodian and Malaysian. I have a little brother and 2 pet fishes. I love to read and hang out with my friends. I elso enjoy playing video games. I have  2 fish and a little brother. 
+       I have gone to Cambodia and Maylasia when I was little. I can understand Khmer a little and speak a little.         
+        </p>
     </body>
 </html>
