--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <img class="banner" src="csbanner (2).jpg">  
-
+<div class="table"
             <table>
                    <tr>
                             <td><a href="https://arahmat25.github.io"><img src="Real-home-button.png"width="200"></a></td>  
@@ -23,5 +23,6 @@
             <h1 class="heading">Welcome to Amir's Programming Portfolio </h1>
         </div>
            <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI</p>
+    </div>
     </body>
 </html>
