--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
         <title>Amir's Programming Portfolio</title>
          <link rel="stylesheet" href="stylesheet.css">
         <style>
+            .table {  {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
           
         </style>
     </head>
