--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <img class="banner" src="csbanner (2).jpg">  
-<div class="table"
+<div class="table">
             <table>
                    <tr>
                             <td><a href="https://arahmat25.github.io"><img src="Real-home-button.png"width="200"></a></td>  
