--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
          <link rel="stylesheet" href="stylesheet.css">
         <style>
             .table {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
+        text-align: center;
+      }
 
           
         </style>
