--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <img class="banner" src="csbanner (2).jpg">  
 <div class="table">
-            <table>
+            <table class="table">
                    <tr>
                             <td><a href="https://arahmat25.github.io"><img src="Real-home-button.png"width="200"></a></td>  
                             <td><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascripts.png" width="200"></a></td>
