--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <title>Amir's Programming Portfolio</title>
          <link rel="stylesheet" href="stylesheet.css">
         <style>
+            .monkey  {
+            margin-left: auto; 
+  margin-right: auto;
+            }
             .table {
         text-align: center;
       }
@@ -15,7 +19,7 @@
     <body>
         <img class="banner" src="csbanner (2).jpg">  
 <div class="table">
-            <table class="table">
+            <table class="monkey">
                    <tr>
                             <td><a href="https://arahmat25.github.io"><img src="Real-home-button.png"width="200"></a></td>  
                             <td><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascripts.png" width="200"></a></td>
