--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
          <link rel="stylesheet" href="stylesheet.css">
         <style>
             .monkey  {
-            margin-left: auto; 
-  margin-right: auto;
+            margin-left: 100px; 
+  margin-right: 100px;
             }
             .table {
         text-align: center;
