--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Amir's Programming Portfolio</title>
          <link rel="stylesheet" href="stylesheet.css">
         <style>
-              .table {
+              #table {
                margin-left: auto; 
   margin-right: auto;  
 }
@@ -16,7 +16,7 @@
     <body>
         <img class="banner" src="csbanner (2).jpg">  
 <div class="table">
-            <table class="monkey">
+            <table id="monkey">
                    <tr>
                             <td><a href="https://arahmat25.github.io"><img src="Real-home-button.png"width="200"></a></td>  
                             <td><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascripts.png" width="200"></a></td>
