--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
          <link rel="stylesheet" href="stylesheet.css">
         <style>
               #table {
-               margin-left: auto; 
-  margin-right: auto;  
+               text-align: center 
 }
 
           
