--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </head>
     <body>
         <img class="banner" src="csbanner (2).jpg">  
-<div class="table">
-            <table id="monkey">
+<div id="table">
+            <table class="monkey">
                    <tr>
                             <td><a href="https://arahmat25.github.io"><img src="Real-home-button.png"width="200"></a></td>  
                             <td><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascripts.png" width="200"></a></td>
