--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <img class="banner" src="csbanner (2).jpg">  
-<div id="table">
+<div class="table">
             <table class="monkey">
                    <tr>
                             <td><a href="https://arahmat25.github.io"><img src="Real-home-button.png"width="200"></a></td>  
