--- a/AboutMe.html
+++ b/AboutMe.html
@@ -30,7 +30,8 @@
             <h1>Welcome to Amir's About Me Page </h1>
         </div>
            <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI<br>
-        My full name is Amir Rahmat. I am Cambodian and Malaysian. I have a little brother and 2 pet fishes. I love to read and hang out with my friends. I elso enjoy playing video games. I have  2 fish and a little brother. 
+        My full name is Amir Rahmat. I am Cambodian and Malaysian. I have a little brother and 2 pet fishes. I love to read and hang out with my friends. I elso enjoy playing video games. 
+               <br>I love seeing fireworks and sleeping 
        I have gone to Cambodia and Maylasia when I was little. I can understand Khmer a little and speak a little.         
         </p>
     </body>
