--- a/AboutMe.html
+++ b/AboutMe.html
@@ -10,7 +10,13 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-}
+             }
+                  #background {
+                float:left;
+                width:10%;
+                margin-left:20px;
+            }
+
   
         </style>
            
@@ -32,7 +38,8 @@
            <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI<br>
         My full name is Amir Rahmat. I am Cambodian and Malaysian. I have a little brother and 2 pet fishes. I love to read <br>and hang out with my friends. I elso enjoy playing video games. 
                <br>I love seeing fireworks and sleeping 
-       I have gone to Cambodia and Maylasia when I was little. I can understand Khmer a little and speak a little.         
+       I have gone to Cambodia and Maylasia when I was little. I can understand Khmer a little and speak a little.
+                <img id="background" src="amirpic.png">
         </p>
     </body>
 </html>
