--- a/new.html
+++ b/new.html
@@ -3,36 +3,30 @@
     <head>
         <meta charset="utf-8">
         <title>Amir's Programming Portfolio</title>
-        <link rel="stylesheet" href="stylesheet.css">
+         <link rel="stylesheet" href="stylesheet.css">
         <style>
-           body {
-  background-image: url("actualbanner.png");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
+              #table {
+               text-align: center 
 }
-            #background {
-                float:left;
-                width:10%;
-                margin-left:20px;
-            }
+
+          
         </style>
     </head>
     <body>
-        <img src="csbanner (2).jpg">  
-        
-            <table width="50%">
+        <img class="banner" src="csbanner (2).jpg">  
+<div id="table">
+            <table class="monkey">
                    <tr>
-                            <td><a href="https://arahmat25.github.io"><img src="Home Button.png"></a></td>  
-                            <td><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascript Button.png"></a></td> 
-                            <td><a href="https://arahmat25.github.io/AboutMe.html"><img src="About Me button.png"></a></td>
+                            <td><a href="https://arahmat25.github.io"><img src="Real-home-button.png"width="200"></a></td>  
+                            <td><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascripts.png" width="200"></a></td>
+                            <td><a href="https://arahmat25.github.io/myapps.html"><img src="My-apps-real.png"width="200"></a></td>
+                            <td><a href="https://arahmat25.github.io/AboutMe.html"><img src="real-about-me.png"width="200"></a></td>
                 </tr>
         </table>
-        <div class="heading">
-            <h1>Welcome to Amir's Programming Test Portfolio </h1>
-            </div>
-           <p>This website has a collection of my test programs that I wrote in my CSC 106 class in URI</p>
-          <img id="background" src="amirpic.png">
-         <img style
+         <div class="heading">
+            <h1 class="heading">Welcome to Amir's Programming Portfolio </h1>
+        </div>
+           <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI</p>
+    </div>
     </body>
 </html>
