--- a/new.html
+++ b/new.html
@@ -2,31 +2,44 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Amir's Programming Portfolio</title>
+        <title>Amir's About Me Portfolio</title>
          <link rel="stylesheet" href="stylesheet.css">
-        <style>
-              #table {
-               text-align: center 
-}
+         <style>
+             body {
+  background-image: url("actualbanner.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+             }
+                  #background {
+                float:left;
+                width:10%;
+                margin-left:250px;
+            }
 
-          
+  
         </style>
+           
     </head>
     <body>
         <img class="banner" src="csbanner (2).jpg">  
-<div id="table">
-            <table class="monkey">
+        <div class="table"> 
+        <table class="monkey">
                    <tr>
-                            <td><a href="https://arahmat25.github.io"><img src="Real-home-button.png"width="200"></a></td>  
+                             <td><a href="https://arahmat25.github.io"><img src="Real-home-button.png"width="200"></a></td>  
                             <td><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascripts.png" width="200"></a></td>
                             <td><a href="https://arahmat25.github.io/myapps.html"><img src="My-apps-real.png"width="200"></a></td>
                             <td><a href="https://arahmat25.github.io/AboutMe.html"><img src="real-about-me.png"width="200"></a></td>
                 </tr>
         </table>
-         <div class="heading">
-            <h1 class="heading">Welcome to Amir's Programming Portfolio </h1>
+        <div class="heading">
+            <h1>Welcome to Amir's About Me Page </h1>
         </div>
-           <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI</p>
-    </div>
+           <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI<br>
+        My full name is Amir Rahmat. I am Cambodian and Malaysian. I have a little brother and 2 pet fishes. I love to read <br>and hang out with my friends. I elso enjoy playing video games. 
+               <br>I love seeing fireworks and sleeping 
+       I have gone to Cambodia and Maylasia when I was little. I can understand Khmer a little and speak a little.
+                <img id="background" src="amirpic.png">
+        </p>
     </body>
 </html>
