--- a/new.html
+++ b/new.html
@@ -16,6 +16,10 @@
                 width:10%;
                 margin-left:250px;
             }
+                .table {
+              margin-left:250px
+              margin-right:0px;
+}
 
   
         </style>
@@ -23,7 +27,7 @@
     </head>
     <body>
         <img class="banner" src="csbanner (2).jpg">  
-        <div class="table"> 
+        <div id="table"> 
         <table class="monkey">
                    <tr>
                              <td><a href="https://arahmat25.github.io"><img src="Real-home-button.png"width="200"></a></td>  
