--- a/new.html
+++ b/new.html
@@ -17,6 +17,7 @@
                 margin-left:250px;
             }
                 .table {
+               float:left;
               margin-left:250px
               margin-right:0px;
 }
