--- a/AboutMe.html
+++ b/AboutMe.html
@@ -16,6 +16,16 @@
                 width:10%;
                 margin-left:250px;
             }
+             #book {
+                 float:right;
+                width:10%;
+                margin-right:250px;
+            }
+             #xbox {
+                 float:left;
+                width:10%;
+                margin-left:250px;
+             }
 
   
         </style>
@@ -38,8 +48,8 @@
            <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI<br>
         My full name is Amir Rahmat. I am Cambodian and Malaysian. I have a little brother and 2 pet fishes. I love to read <br>and hang out with my friends. I elso enjoy playing video games. 
                <br>I love seeing fireworks and sleeping 
-       I have gone to Cambodia and Maylasia when I was little. <img id=xbox src="xbox.jpg">I can understand Khmer a little and speak a little.
-                <img id="background" src="amirpic.png">
+       I have gone to Cambodia and Maylasia when I was little. <img id="xbox" src="xbox.jpg">I can understand Khmer a little and speak a little.
+                <img id="background" src="amirpic.png"> <img id="book" src="book.jpg">
         </p>
     </body>
 </html>
