--- a/AboutMe.html
+++ b/AboutMe.html
@@ -26,6 +26,11 @@
                 width:10%;
                 margin-left:250px;
              }
+             #fish {
+                  float:left;
+                width:10%;
+                margin-left:250px;
+            }
 
   
         </style>
