--- a/AboutMe.html
+++ b/AboutMe.html
@@ -15,21 +15,25 @@
                 float:left;
                 width:10%;
                 margin-left:250px;
+                clear:both;
             }
              #book {
                  float:right;
                 width:10%;
                 margin-right:250px;
+                  clear:both;
             }
              #xbox {
                  float:left;
                 width:10%;
                 margin-left:250px;
+                  clear:both;
              }
              #fish {
                   float:left;
                 width:10%;
                 margin-left:250px;
+                  clear:both;
             }
 
   
