--- a/new.html
+++ b/new.html
@@ -21,7 +21,9 @@
               margin-left:250px
               margin-right:0px;
 }
-
+p {
+    margin-left: 200px;
+    margin-right: 200px;
   
         </style>
            
