--- a/AboutMe.html
+++ b/AboutMe.html
@@ -35,6 +35,14 @@
                 margin-left:250px;
                   clear:both;
             }
+             p { 
+                 margin-left: 210px;
+                 margin-right: 210px;
+             }
+             h1 {
+                 margin-left: 210px;
+                 margin-right: 210px;
+             }
 
   
         </style>
