--- a/new.html
+++ b/new.html
@@ -14,24 +14,44 @@
                   #background {
                 float:left;
                 width:10%;
-                margin-left:250px;
             }
-                .table {
-               float:left;
-              margin-left:250px
-              margin-right:0px;
-}
-p {
-    margin-left: 210px;
-    margin-right: 200px;
+             #book {
+                 float:right;
+                width:10%;
+                margin-left: 210px;
+                 margin-right: 0px;
+                  clear:both;
+            }
+             #xbox {
+                 float:left;
+                width:10%;
+                 margin-left: 210px;
+                 margin-right: 0px;
+                  clear:both;
              }
+             #fish {
+                  float:left;
+                width:10%;
+                margin-left: 210px;
+                 margin-right: 0px;
+                  clear:both;
+            }
+             p { 
+                 margin-left: 210px;
+                 margin-right: 210px;
+             }
+             h1 {
+                 margin-left: 210px;
+                 margin-right: 210px;
+             }
+
   
         </style>
            
     </head>
     <body>
         <img class="banner" src="csbanner (2).jpg">  
-        <div id="table"> 
+        <div class="table"> 
         <table class="monkey">
                    <tr>
                              <td><a href="https://arahmat25.github.io"><img src="Real-home-button.png"width="200"></a></td>  
@@ -44,10 +64,10 @@ p {
             <h1>Welcome to Amir's About Me Page </h1>
         </div>
            <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI<br>
-        My full name is Amir Rahmat. I am Cambodian and Malaysian. I have a little brother and 2 pet fishes. I love to read <br>and hang out with my friends. I elso enjoy playing video games. 
+        My full name is Amir Rahmat. <img id="book" src="book.jpg">I am Cambodian and Malaysian. I have a little brother and 2 pet fishes. <img id="fish" src="fish.jpg">I love to read <br>and hang out with my friends. I elso enjoy playing video games. 
                <br>I love seeing fireworks and sleeping 
-       I have gone to Cambodia and Maylasia when I was little. I can understand Khmer a little and speak a little.
-                <img id="background" src="amirpic.png">
+       I have gone to Cambodia and Maylasia when I was little. <img id="xbox" src="xbox.jpg">I can understand Khmer a little and speak a little.
+                <img id="background" src="amirpic.png"> 
         </p>
     </body>
 </html>
