--- a/new.html
+++ b/new.html
@@ -37,8 +37,7 @@
                   clear:both;
             }
              p { 
-                 margin-left: 210px;
-                 margin-right: 210px;
+                text-align:center
              }
              h1 {
                  margin-left: 210px;
