--- a/new.html
+++ b/new.html
@@ -37,8 +37,8 @@
                   clear:both;
             }
              p { 
-                text-align:center
-                    margin-left:210px;
+                margin-left: 210px;
+                 margin-right: 210px;
              }
              h1 {
                  margin-left: 210px;
