--- a/new.html
+++ b/new.html
@@ -43,6 +43,7 @@
              h1 {
                  margin-left: 210px;
                  margin-right: 210px;
+                 clear:both;
              }
 
   
