--- a/new.html
+++ b/new.html
@@ -39,6 +39,7 @@
              p { 
                 margin-left: 210px;
                  margin-right: 210px;
+                 clear:both;
              }
              h1 {
                  margin-left: 210px;
