--- a/new.html
+++ b/new.html
@@ -38,6 +38,7 @@
             }
              p { 
                 margin-left: 210px;
+                 margin-right: 210px;
              }
              h1 {
                  margin-left: 210px;
