--- a/AboutMe.html
+++ b/AboutMe.html
@@ -61,8 +61,8 @@
             <h1>Welcome to Amir's About Me Page </h1>
         </div>
            <p>This website has a collection of my programs that I wrote in my CSC 106 class in URI<br>
-        My full name is Amir Rahmat. <img id="book" src="book.jpg">I am Cambodian and Malaysian. I have a little brother and 2 pet fishes. <img id="fish" src="fish.jpg">I love to read <br>and hang out with my friends. I elso enjoy playing video games. 
-               <br>I love seeing fireworks and sleeping 
+        My full name is Amir Rahmat. <img id="book" src="book.jpg">I am Cambodian and Malaysian. I have a little brother and 2 pet fishes. <img id="fish" src="fish.jpg">I love to read and hang out with my friends. I elso enjoy playing video games. 
+            I love seeing fireworks and sleeping 
        I have gone to Cambodia and Maylasia when I was little. <img id="xbox" src="xbox.jpg">I can understand Khmer a little and speak a little.
                 <img id="background" src="amirpic.png"> 
         </p>
