--- a/Javascripts.html
+++ b/Javascripts.html
@@ -22,6 +22,7 @@
         </div>
            <p>This website has a collection of my Javascripts that I wrote in my CSC 106 class in URI<br>
                <h2><a href="https://www.khanacademy.org/computer-programming/rahmat_bitmoji/5600293337219072">Rahmat_Bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/rahmat_bitmoji/5600293337219072/embed.js?editor=no&buttons=no&author=no&embed=yes" width="50"></script>
-</p>
+               <h2><a href="https://www.khanacademy.org/computer-programming/rahmat_dancing_bitmoji/5472168456536064">Rahmat_Dancing_Bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/rahmat_dancing_bitmoji/5472168456536064/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+            </p>
     </body>
 </html>
