--- a/Javascripts.html
+++ b/Javascripts.html
@@ -4,6 +4,11 @@
         <meta charset="utf-8">
         <title>Amir's Javascript Programming Portfolio</title>
          <link rel="stylesheet" href="stylesheet.css">
+        <style>
+        .1 {
+        float:left;
+        wdith:30%;
+        </style>
     </head>
     <body>
         <img class="banner" src="csbanner (2).jpg">  
@@ -21,8 +26,8 @@
             <h1>Welcome to Amir's Javascript Page </h1>
         </div>
            <p>This website has a collection of my Javascripts that I wrote in my CSC 106 class in URI<br>
-               <h2><a href="https://www.khanacademy.org/computer-programming/rahmat_bitmoji/5600293337219072">Rahmat_Bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/rahmat_bitmoji/5600293337219072/embed.js?editor=no&buttons=no&author=no&embed=yes" height="42" width="42"></script>
-               <h2><a href="https://www.khanacademy.org/computer-programming/rahmat_dancing_bitmoji/5472168456536064">Rahmat_Dancing_Bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/rahmat_dancing_bitmoji/5472168456536064/embed.js?editor=no&buttons=no&author=no&embed=yes"height="42" width="42"></script>
+               <span class="1"<h2><a href="https://www.khanacademy.org/computer-programming/rahmat_bitmoji/5600293337219072">Rahmat_Bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/rahmat_bitmoji/5600293337219072/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></span>
+              <span class="2" <h2><a href="https://www.khanacademy.org/computer-programming/rahmat_dancing_bitmoji/5472168456536064">Rahmat_Dancing_Bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/rahmat_dancing_bitmoji/5472168456536064/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></span>
             </p>
     </body>
 </html>
