--- a/Javascripts.html
+++ b/Javascripts.html
@@ -31,8 +31,8 @@
             <h1>Welcome to Amir's Javascript Page </h1>
         </div>
            <p>This website has a collection of my Javascripts that I wrote in my CSC 106 class in URI<br>
-              <h2><a href="https://www.khanacademy.org/computer-programming/rahmat_bitmoji/5600293337219072">Rahmat_Bitmoji</a> <span class="1"></h2><script src="https://www.khanacademy.org/computer-programming/rahmat_bitmoji/5600293337219072/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></span>
-              <h2><a href="https://www.khanacademy.org/computer-programming/rahmat_dancing_bitmoji/5472168456536064">Rahmat_Dancing_Bitmoji</a><span class="2"></h2><script src="https://www.khanacademy.org/computer-programming/rahmat_dancing_bitmoji/5472168456536064/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></span>
+              <h2><a href="https://www.khanacademy.org/computer-programming/rahmat_bitmoji/5600293337219072">Rahmat_Bitmoji</a> <span id="1"></h2><script src="https://www.khanacademy.org/computer-programming/rahmat_bitmoji/5600293337219072/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></span>
+              <h2><a href="https://www.khanacademy.org/computer-programming/rahmat_dancing_bitmoji/5472168456536064">Rahmat_Dancing_Bitmoji</a><span id="2"></h2><script src="https://www.khanacademy.org/computer-programming/rahmat_dancing_bitmoji/5472168456536064/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></span>
             </p>
     </body>
 </html>
