--- a/Javascripts.html
+++ b/Javascripts.html
@@ -8,10 +8,12 @@
         .1 {
         float:left;
         wdith:30%;
+            clear:both;
             }
             .2{
                 float:right;
                 width:30%;
+                clear:both;
             }
         </style>
     </head>
