--- a/Javascripts.html
+++ b/Javascripts.html
@@ -4,18 +4,7 @@
         <meta charset="utf-8">
         <title>Amir's Javascript Programming Portfolio</title>
          <link rel="stylesheet" href="stylesheet.css">
-        <style>
-        .1 {
-        float:left;
-        wdith:30%;
-            clear:both;
-            }
-            .2{
-                float:right;
-                width:30%;
-                clear:both;
-            }
-        </style>
+      
     </head>
     <body>
         <img class="banner" src="csbanner (2).jpg">  
@@ -40,6 +29,11 @@
              <th> <h2><a href="https://www.khanacademy.org/computer-programming/rahmat_dancing_bitmoji/5472168456536064">Rahmat_Dancing_Bitmoji</a><span id="2"></h2><script src="https://www.khanacademy.org/computer-programming/rahmat_dancing_bitmoji/5472168456536064/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></span></th>
                        </tr>
                    </thead>
+                   <tbody>
+                       <tr>
+                           <tb><h2><a href="https://www.khanacademy.org/computer-programming/rahmat_race_bitmoji/4977093884559360">Rahmat_Race_Bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/rahmat_race_bitmoji/4977093884559360/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></tb>
+                       </tr>
+                   </tbody>
             </table>
             
     </body>
