--- a/Javascripts.html
+++ b/Javascripts.html
@@ -30,7 +30,10 @@
                    <tr>
                        <td><p><a href="https://www.khanacademy.org/computer-programming/rahmat_race_bitmoji/4977093884559360">Rahmat_Race_Bitmoji</a></p><script src="https://www.khanacademy.org/computer-programming/rahmat_race_bitmoji/4977093884559360/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
                   <td><a href="https://www.khanacademy.org/computer-programming/rahmat_racingbitmojifun/6584262618824704">Rahmat_racingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/rahmat_racingbitmojifun/6584262618824704/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
-                           </table>
+            <tr>
+                <td><a href="https://www.khanacademy.org/computer-programming/rahmat_racingbitmojifun/6584262618824704">Rahmat_racingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/rahmat_racingbitmojifun/6584262618824704/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+        </tr>    
+        </table>
             
     </body>
 </html>
