--- a/Javascripts.html
+++ b/Javascripts.html
@@ -35,7 +35,7 @@
                 <td><a href="https://www.khanacademy.org/computer-programming/decision-tree/5466884212310016">Decision Tree</a></h2><script src="https://www.khanacademy.org/computer-programming/decision-tree/5466884212310016/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
         </tr>   
         <tr>
-            <td><a href="https://www.khanacademy.org/computer-programming/rahmat_follow/5014062131888128">Rahmat_Follow</a></h2><script src="https://www.khanacademy.org/computer-programming/rahmat_follow/5014062131888128/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script></td>
+            <td><a href="https://www.khanacademy.org/computer-programming/rahmat_follow/5014062131888128">Rahmat_Follow</a></h2><script src="https://www.khanacademy.org/computer-programming/rahmat_follow/5014062131888128/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
 </tr>
         </table>
             
