--- a/Javascripts.html
+++ b/Javascripts.html
@@ -38,6 +38,9 @@
             <td><a href="https://www.khanacademy.org/computer-programming/rahmat_follow/5014062131888128">Rahmat_Follow</a></h2><script src="https://www.khanacademy.org/computer-programming/rahmat_follow/5014062131888128/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
             <td><a href="https://www.khanacademy.org/computer-programming/rahmat_zoo/5626923631820800"><p>Rahmat_Zoo</p><img src="Amir_Zoo.png" width=85%></a></td>
 </tr>
+<tr>
+    <td><a href="https://www.khanacademy.org/computer-programming/rahmat_tag/6439789662355456">Rahmat_Tag</a></h2><script src="https://www.khanacademy.org/computer-programming/rahmat_tag/6439789662355456/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+</tr>
         </table>
             
     </body>
