--- a/Javascripts.html
+++ b/Javascripts.html
@@ -42,6 +42,8 @@
    <td><a href="https://www.khanacademy.org/computer-programming/rahmat_tag/6439789662355456"><p>Rahmat_Tag</p><img src="Amir_Tag.png" width=85%></a></td>
     <td><a href="https://www.khanacademy.org/computer-programming/rahmat_contact/5718690012119040"><p>Rahmat_ContactList</p><img src="Contact List .png" width=85%></a></td>
 </tr>
+<tr> 
+    <td><a href="https://www.khanacademy.org/computer-programming/rahmat_number_tracer/5978519712612352"><p>Rahmat_Tracer</p><img src="Tracer.png" width=85%></a></td>
         </table>
             
     </body>
