--- a/Javascripts.html
+++ b/Javascripts.html
@@ -44,7 +44,7 @@
 </tr>
 <tr> 
     <td><a href="https://www.khanacademy.org/computer-programming/rahmat_number_tracer/5978519712612352"><p>Rahmat_Tracer</p><img src="Tracer.png" width=85%></a></td>
-    <td><a href="https://www.khanacademy.org/computer-programming/frogger-test/5251002070515712"><p>Rahmat_Tracer</p><img src="Amir_Frogger.png" width=85%></a></td>
+    <td><a href="https://www.khanacademy.org/computer-programming/frogger-test/5251002070515712"><p>Rahmat_Frogger</p><img src="Amir_Frogger.png" width=85%></a></td>
         </table>
             
     </body>
