--- a/finalProject.html
+++ b/finalProject.html
@@ -25,6 +25,7 @@
            <p>This webpage has my final project for CSC 106. To play the game click start screen, to learn the rules, click how to playi, click the disclaimer button for a disclaimer, and click Scoring to understand the scoring of the game. Once you click Start game, you can click the spin button to roll the board, but it also takes away a coin. If 3 images match, you get coins based on the scoing system, and if you get to 0 coins, you lose.<br></p>
                <table class="monkey" width=30%>
                        <tr>
+              <th><iframe src="https://pro.panopto.com/Panopto/Pages/Embed.aspx?tid=c520d817-9452-4f96-b95d-ae0401542aef&autoplay=true&offerviewer=true&showtitle=true&showbrand=true&captions=true&interactivity=all" height="100" width="720" style="border: 1px solid #464646;" allowfullscreen allow="autoplay"></iframe></th>
               <th><h2><a href="https://www.khanacademy.org/computer-programming/final-project/5888552539832320">Final Project</a></h2><script src="https://www.khanacademy.org/computer-programming/final-project/5888552539832320/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></th?
                        </tr>
         </table>
